# bestof

./: LICENSE  MANIFEST.in  README.md  frontend.py  pyproject.toml  setup.cfg  setup.py  test.py  upload_test.sh
New_App/: app.py  app1.ui  menu.py  res.py  results.py  settings.py
New_App/Demo/: res.qrc.txt
New_App/Demo/New_App_ver2/: app.py  main.py  menu.py
New_App/New_App_ver2/: app.py  menu.py  res.py
bestOf.egg-info/: PKG-INFO  requires.txt
bestOf/backend/: blinkDetector.py  createBlinkModel.py  createCroppedFaceModel.py  createScoreMaps.py  create_dataset.py  cropDetector.py  evaluateCentering.py  evaluateLighting.py  evaluateResolution.py  evaluateSharpness.py  identifyPeople.py  settings.json  similarity.py
bestOf/frontend/: analyzing_page.py  app.py  frontend.py  main.py  menu.py  res.py  results.py  settings.py
src/backend/: blinkDetector.py  classDefinitions.py  createBlinkModel.py  createCroppedFaceDataset.py  createCroppedFaceModel.py  cropDetector.py  identifyPeople.py  similarity.py
src/frontend/: frontend.py
