[meta_data]
name = bestOf
version = 0.0.1
url = https://github.com/apangasa/bestof
description = A module that uses machine learning to chose the best image in groups

[options]
packages = find:
install_requires = 
    torch
    PyQt5
include_package_data = True

[options.package_data]
blinkModel = src/backend/saved_models/blinkingFaces.pth
cropModel = src/backend/saved_models/cropped_faces.pth

[entry_points]
console_scripts =
    bestOf = src.frontend.frontend:main