[meta_data]
name = bestOf
version = 0.0.3
url = https://github.com/apangasa/bestof
description = A module that uses machine learning to chose the best image in groups
long_description = This is long

[options]
packages = find:
install_requires = 
    torch
    PyQt5
include_package_data = True

[entry_points]
console_scripts =
    bestOf = src.frontend:main